[package]
name = "oyster-attestation-server-ed25519"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-nitro-enclaves-nsm-api = "0.4.0"
clap = { version = "4.0.18", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.89"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
